# aoc

./: .gitignore  aoc.py  methodlib.py  profile.ps1  pyproject.toml  requirements.txt  settings.toml  settings.toml.example  timer.txt  utils.py
input/2019/: 1.txt  6.txt
input/2021/: 9.txt
methods/: haskell.py  prolog.py  python.py  sql.py
solutions/: __init__.py
solutions/haskell/: aoc.cabal
solutions/haskell/app/: Main.hs
solutions/haskell/src/: AOC.hs
solutions/prolog/2022/: 1.pro  d1.pro
solutions/python/lib/: d23_alt.py  digits.py  gint.py  graph.py  grid.py  grid2.py  linopt.py  numth.py  prop.py  rangeset.py  smath.py  test_gint.py  test_graph.py  test_grid.py  test_numth.py  test_prop.py  unionfind.py  utils.py
solutions/python/y2015/: d21.py  d25.py  d5.py
solutions/python/y2018/: d1.py  d2.py  d3.py  d4.py
solutions/python/y2019/: d1.py
solutions/python/y2021/: d17.py  d18.py  d19.py  d20.py
solutions/python/y2022/: d1.py  d10.py  d11.py  d12.py  d13.py  d14.py  d15.py  d16.py  d17.py  d18.py  d19.py  d19_alt.py  d2.py  d20.py  d21.py  d21_alt.py  d22.py  d23.py  d24.py  d3.py  d4.py  d5.py  d6.py  d7.py  d8.py  d9.py
solutions/python/y2023/: d1.py  d10.py  d10_pic.txt  d11.py  d12-old.py  d12.py  d13.py  d15.py  d17.py  d19.py  d2.py  d20.py  d21-attempt.py  d21-old.py  d21.py  d22.py  d23.py  d24.py  d25.py  d3.py  d4.py  d5-abandoned.py  d5.py  d6.py  d7.py  d8-old.py  d8.py  d9.py  test_d12.py
solutions/python/y2024/: d1.py  d10.py  (+24 more)
solutions/y2022/: __init__.py  d1.py  d2.py  d3.py
stubs/: sdl2.pyi
stubs/sdl2/: __init__.pyi
(+29 files in other folders)
